tests/__snapshots__/api-toBeSymbol.test.ts.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toBeSymbol: stderr 1`] = `
"Error: Type 'void' is not 'symbol'.

  12 |   expect(returnsSymbol()).type.toBeSymbol();
  13 | 
> 14 |   expect(returnsVoid()).type.toBeSymbol();
     |                              ^
  15 | });
  16 | 
  17 | test("is NOT symbol?", () => {

       at ./__typetests__/toBeSymbol.test.ts:14:30 ❭ is symbol?

Error: Type 'symbol' is 'symbol'.

  18 |   expect(returnsVoid()).type.not.toBeSymbol();
  19 | 
> 20 |   expect(returnsSymbol()).type.not.toBeSymbol();
     |                                    ^
  21 | });
  22 | 

       at ./__typetests__/toBeSymbol.test.ts:20:36 ❭ is NOT symbol?

"
`;

exports[`toBeSymbol: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

fail ./__typetests__/toBeSymbol.test.ts
  × is symbol?
  × is NOT symbol?

Targets:    1 failed, 1 total
Test files: 1 failed, 1 total
Tests:      2 failed, 2 total
Assertions: 2 failed, 2 passed, 4 total
Duration:   <<timestamp>>

Ran all test files.
"
`;
